first final step, without download from camera

--- a/requirements.txt
+++ b/requirements.txt
@@ -16,3 +16,7 @@ PySide6>=6.5.0
 # YouTube Upload (optional, für convert_mjpeg_gui.py Upload-Funktion)
 google-api-python-client>=2.100.0
 google-auth-oauthlib>=1.1.0
+
+# Raspberry Pi Video-Download (SSH/SFTP)
+paramiko>=2.11.0
+PyYAML>=6.0
